src/test/ui/in-band-lifetimes/ellided-lifetimes.stderr
error: hidden lifetime parameters are deprecated, try `Foo<'_>`
  --> $DIR/ellided-lifetimes.rs:15:12
   |
LL | fn foo(x: &Foo) {
   |            ^^^
   |
note: lint level defined here
  --> $DIR/ellided-lifetimes.rs:12:9
   |
LL | #![deny(elided_lifetime_in_path)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

